--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "16.1.0",
     "next-pwa": "^5.6.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
